adding image link

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,6 @@
 services:
   jupyter:
-    image: jkropko/jupyterlab_dev
+    image: karimelbarbary2024/python_jupyterlab
     ports:
       - "8888:8888"
     env_file:
