--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ requests = "==2.32.3"
 python-dotenv = "==1.0.1"
 ydata-profiling = "==4.9.0"
 beautifulsoup4 = "==4.12.3"
-sqlalchemy = "==2.0.33"
+sqlalchemy = "*"
 xlrd-2024 = "==2.0.1"
 ipywidgets = "==8.1.5"
 matplotlib = "==3.9.2"
